--- a/trigger/trigger_formula1_project.json
+++ b/trigger/trigger_formula1_project.json
@@ -2,7 +2,7 @@
 	"name": "trigger_formula1_project",
 	"properties": {
 		"annotations": [],
-		"runtimeState": "Started",
+		"runtimeState": "Stopped",
 		"pipeline": {
 			"pipelineReference": {
 				"referenceName": "Pipeline_git_demo",
